--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,24 @@
-
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
-// Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "~font-awesome/css/font-awesome";
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+@import "helper";
+@import "style";
+
+.navbar-expand-md .navbar-collapse{
+	display: block !important;
+}
+
+.navbar-nav {
+	display: block !important;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+    display: inline-block;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    color: #6c757d;
+    content: "/" !important;
 }
